<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" 
                android:paddingBottom="8dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp" >

                    <TextView
                        android:id="@+id/fileName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/length"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/absolutePath"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fileName"
                        android:layout_marginTop="8dp"
                        android:text="@string/title"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/fileSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/absolutePath"
                        android:layout_marginTop="8dp"
                        android:text="@string/artist"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/lastModified"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fileSize"
                        android:layout_marginTop="8dp"
                        android:text="@string/albums"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/directorysCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/lastModified"
                        android:layout_marginTop="8dp"
                        android:text="@string/year"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/filesCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/directorysCount"
                        android:layout_marginTop="8dp"
                        android:text="@string/location"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/filesCount"
                        android:layout_marginTop="8dp"
                        android:text="@string/size"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                    
                    <TextView
                        android:id="@+id/b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/a"
                        android:layout_marginTop="8dp"
                        android:text="@string/music_encode"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                    
                    <TextView
                        android:id="@+id/c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/b"
                        android:layout_marginTop="8dp"
                        android:text="@string/channel"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                    
                    <TextView
                        android:id="@+id/d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/c"
                        android:layout_marginTop="8dp"
                        android:text="@string/frequency"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/d"
                        android:layout_marginTop="8dp"
                        android:text="@string/bitrate"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="6dp" >

                    <TextView
                        android:id="@+id/musicLength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/musicTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/musicLength"
                        android:layout_marginTop="8dp"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/musicArtist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/musicTitle"
                        android:layout_marginTop="8dp"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/musicAlbum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/musicArtist"
                        android:layout_marginTop="8dp"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/musicYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/musicAlbum"
                        android:layout_marginTop="8dp"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/musicFileLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/musicYear"
                        android:layout_marginTop="8dp"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/musicFileSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/musicFileLocation"
                        android:layout_marginTop="8dp"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                    
                     <TextView
                        android:id="@+id/musicEncode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/musicFileSize"
                        android:layout_marginTop="8dp"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/musicChanel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/musicEncode"
                        android:layout_marginTop="8dp"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/musicFrequency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/musicChanel"
                        android:layout_marginTop="8dp"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/musicBitrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/musicFrequency"
                        android:layout_marginTop="8dp"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </HorizontalScrollView>

</LinearLayout>